--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,31 +5,35 @@
 {% block substylesheets %}
     <link rel="stylesheet" href="{{ asset('css/login.css') }}"/>{% endblock %}
 
-{% block body_class %}text-center{% endblock %}
+{% block body_class %}{% endblock %}
 
 {% block body %}
     <form method="post" class="form-login">
-        <object type="image/svg+xml"
-                data="{{ asset('img/logo.svg') }}"
-                width="256px"
-                height="256px"
-        >
-            <img src="{{ asset('img/logo.png') }}" alt="ИС Экспертус">
-        </object>
-
-        <h1 class="h3 mb-3 font-weight-normal">Войти в МИС Экспертус</h1>
+        <div class="text-center mb-4">
+            <object type="image/svg+xml"
+                    data="{{ asset('img/logo.svg') }}"
+                    width="256px"
+                    height="256px"
+            >
+                <img src="{{ asset('img/logo.png') }}" alt="ИС Экспертус">
+            </object>
+        </div>
 
         {% if error %}
             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
         {% endif %}
+        <div class="form-label-group">
+            <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control"
+                   autocomplete="username" required autofocus placeholder="Имя пользователя...">
+            <label for="inputUsername">Имя пользователя</label>
+        </div>
 
-        <label for="inputUsername" class="sr-only">Имя пользователя</label>
-        <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control"
-               autocomplete="username" required autofocus placeholder="Имя пользователя...">
-        <label for="inputPassword" class="sr-only">Пароль</label>
-        <input type="password" name="password" id="inputPassword" class="form-control"
-               autocomplete="current-password"
-               required placeholder="Пароль...">
+        <div class="form-label-group">
+            <input type="password" name="password" id="inputPassword" class="form-control"
+                   autocomplete="current-password"
+                   required placeholder="Пароль...">
+            <label for="inputPassword">Пароль</label>
+        </div>
 
         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
