--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,8 +12,8 @@
     <link rel="manifest" href="{{ asset('/favicon/site.webmanifest') }}">
     <link rel="mask-icon" href="{{ asset('/favicon/safari-pinned-tab.svg') }}" color="#ffffff">
     <link rel="shortcut icon" href="{{ asset('/favicon/favicon.ico') }}">
-    <meta name="apple-mobile-web-app-title" content="ИС Экспертус">
-    <meta name="application-name" content="ИС Экспертус">
+    <meta name="apple-mobile-web-app-title" content="{{ '0JjQoSDQrdC60YHQv9C10YDRgtGD0YE='|base64_decode }}">
+    <meta name="application-name" content="{{ '0JjQoSDQrdC60YHQv9C10YDRgtGD0YE='|base64_decode }}">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-config" content="{{ asset('/favicon/browserconfig.xml') }}">
     <meta name="theme-color" content="#ffffff">
@@ -32,14 +32,14 @@
     {% endblock %}
 </head>
 <body class="{% block body_class %}d-flex flex-column h-100{% endblock %}">
+<div class="container">
+    {% if app.user %}
+        {% include 'inc/header.html.twig' %}
+    {% endif %}
 
-{% if app.user %}
-    {% include 'inc/header.html.twig' %}
-{% endif %}
+    {% block body %}{% endblock %}
 
-{% block body %}{% endblock %}
-
-
+</div>
 
 {% block javascripts %}
     {% if app.environment == 'dev' %}
