feat(graph): Подключение сэмпла графики на дашборд

--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -11,10 +11,34 @@
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
+    This friendly message is coming from:asdasd
     <ul>
         <li>Your controller at <code><a href="{{ '/var/www/user413.test/httpdocs/src/Controller/DashboardController.php'|file_link(0) }}">src/Controller/DashboardController.php</a></code></li>
         <li>Your template at <code><a href="{{ '/var/www/user413.test/httpdocs/templates/dashboard/index.html.twig'|file_link(0) }}">templates/dashboard/index.html.twig</a></code></li>
     </ul>
+    <div id="main" style="width:600px; height:400px;"></div>
+    <script>
+        var chartDom = document.getElementById('main');
+        var myChart = echarts.init(chartDom);
+        var option;
+
+        option = {
+            xAxis: {
+                type: 'category',
+                data: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun']
+            },
+            yAxis: {
+                type: 'value'
+            },
+            series: [{
+                data: [150, 230, 224, 218, 135, 147, 260],
+                type: 'line'
+            }]
+        };
+
+        option && myChart.setOption(option);
+
+    </script>
+
 </div>
 {% endblock %}
