--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,7 @@
     <link rel="manifest" href="{{ asset('/favicon/site.webmanifest') }}">
     <link rel="mask-icon" href="{{ asset('/favicon/safari-pinned-tab.svg') }}" color="#ffffff">
     <link rel="shortcut icon" href="{{ asset('/favicon/favicon.ico') }}">
+    <script src="{{ asset('assets/echarts-5.1.2-dist/echarts.min.js') }}"></script>
     <meta name="apple-mobile-web-app-title" content="ИС Экспертус">
     <meta name="application-name" content="ИС Экспертус">
     <meta name="msapplication-TileColor" content="#ffffff">
