--- a/templates/dashboard/expert.html.twig
+++ b/templates/dashboard/expert.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Дашбоард{% endblock %}
+{% block title %}{{ title }}{% endblock %}
 
 {% block body %}
 <style>
