--- a/templates/inc/header.html.twig
+++ b/templates/inc/header.html.twig
@@ -1,7 +1,7 @@
 <header class="blog-header py-3">
     <div class="row flex-nowrap justify-content-between align-items-center">
         <div class="col-auto">
-            <a class="blog-header-logo d-flex align-items-center text-decoration-none text-first" href="#">
+            <a class="blog-header-logo d-flex align-items-center text-decoration-none text-first" href="{{ is_granted('ROLE_DOCTOR') ? path('doctor_dashboard') : is_granted('ROLE_EXPERT') ? path('expert_dashboard') : path('app_logout') }}">
                 <object type="image/svg+xml"
                         data="{{ asset('img/min-logo.svg') }}"
                         width="64x"
