добавляет информацию о враче

--- a/templates/dashboard/doctor.html.twig
+++ b/templates/dashboard/doctor.html.twig
@@ -3,6 +3,24 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block body %}
+    <div class="row">
+        <div class="col-md-6 mb-4">
+            {% if app.user.vrach %}
+                {% set fio = app.user.vrach.fio %}
+                {% set lpu = app.user.vrach.lpu.name %}
+                {% set prof = app.user.vrach.prof %}
+                {% set snils = app.user.vrach.snils %}
+            {% else %}
+                {% set fio = 'Незаполнено' %}
+                {% set lpu = 'Незаполнено' %}
+                {% set prof = 'Незаполнено' %}
+                {% set snils = 'Незаполнено' %}
+            {% endif %}
+
+            {% include 'inc/profile.html.twig' %}
+        </div>
+    </div>
+
     <div class="row mb-2">
         <div class="col-md-4">
             <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
@@ -10,11 +28,17 @@
                     <strong class="d-inline-block mb-2 text-primary">World</strong>
                     <h3 class="mb-0">Featured post</h3>
                     <div class="mb-1 text-muted">Nov 12</div>
-                    <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                    <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to
+                        additional content.</p>
                     <a href="#" class="stretched-link">Continue reading</a>
                 </div>
                 <div class="col-auto d-none d-lg-block">
-                    <svg class="bd-placeholder-img" width="100" height="300" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="13%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+                    <svg class="bd-placeholder-img" width="100" height="300" xmlns="http://www.w3.org/2000/svg"
+                         role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice"
+                         focusable="false"><title>Placeholder</title>
+                        <rect width="100%" height="100%" fill="#55595c"></rect>
+                        <text x="13%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
+                    </svg>
                 </div>
             </div>
         </div>
@@ -24,11 +48,17 @@
                     <strong class="d-inline-block mb-2 text-success">Design</strong>
                     <h3 class="mb-0">Post title</h3>
                     <div class="mb-1 text-muted">Nov 11</div>
-                    <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                    <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to
+                        additional content.</p>
                     <a href="{{ path('grid') }}" class="stretched-link">Continue reading</a>
                 </div>
                 <div class="col-auto d-none d-lg-block">
-                    <svg class="bd-placeholder-img" width="100" height="300" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="13%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+                    <svg class="bd-placeholder-img" width="100" height="300" xmlns="http://www.w3.org/2000/svg"
+                         role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice"
+                         focusable="false"><title>Placeholder</title>
+                        <rect width="100%" height="100%" fill="#55595c"></rect>
+                        <text x="13%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
+                    </svg>
                 </div>
             </div>
         </div>
@@ -38,11 +68,17 @@
                     <strong class="d-inline-block mb-2 text-success">Design</strong>
                     <h3 class="mb-0">Post title</h3>
                     <div class="mb-1 text-muted">Nov 11</div>
-                    <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                    <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to
+                        additional content.</p>
                     <a href="#" class="stretched-link">Continue reading</a>
                 </div>
                 <div class="col-auto d-none d-lg-block">
-                    <svg class="bd-placeholder-img" width="100" height="300" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="13%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+                    <svg class="bd-placeholder-img" width="100" height="300" xmlns="http://www.w3.org/2000/svg"
+                         role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice"
+                         focusable="false"><title>Placeholder</title>
+                        <rect width="100%" height="100%" fill="#55595c"></rect>
+                        <text x="13%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
+                    </svg>
                 </div>
             </div>
         </div>
