feat(form): Форма добавления случая лечения

--- a/templates/doctor/newsluch.html.twig
+++ b/templates/doctor/newsluch.html.twig
@@ -20,9 +20,49 @@
             {% include 'inc/profile.html.twig' %}
         </div>
     </div>
+    <script>
+        // add-collection-widget.js
+        jQuery(document).ready(function () {
+            jQuery('.add-another-collection-widget').click(function (e) {
+                var list = jQuery(jQuery(this).attr('data-list-selector'));
+                // Try to find the counter of the list or use the length of the list
+                var counter = list.data('widget-counter') || list.children().length;
 
-{{ form_start(form) }}
-{{ form_rest(form) }}
+                // grab the prototype template
+                var newWidget = list.attr('data-prototype');
+                // replace the "__name__" used in the id and name of the prototype
+                // with a number that's unique to your emails
+                // end name attribute looks like name="contact[emails][2]"
+                newWidget = newWidget.replace(/__name__/g, counter);
+                // Increase the counter
+                counter++;
+                // And store it, the length cannot be used if deleting widgets is allowed
+                list.data('widget-counter', counter);
+
+                // create a new list element and add it to the list
+                var newElem = jQuery(list.attr('data-widget-tags')).html(newWidget);
+                newElem.appendTo(list);
+            });
+        });
+    </script>
+    {{ form_start(form) }}
+    <ul id="email-fields-list"
+        data-prototype="{{ form_widget(form.usl.vars.prototype)|e }}"
+        data-widget-tags="{{ '<li></li>'|e }}"
+        data-widget-counter="{{ form.usl|length }}">
+        {% for emailField in form.usl %}
+            <li>
+                {{ form_errors(emailField) }}
+                {{ form_widget(emailField) }}
+            </li>
+        {% endfor %}
+    </ul>
+
+    <button type="button"
+            class="add-another-collection-widget"
+            data-list-selector="#email-fields-list">Add another email
+    </button>
+    {{ form_rest(form) }}
 
 
 {% endblock %}
