--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,6 +13,7 @@
     <link rel="mask-icon" href="{{ asset('/favicon/safari-pinned-tab.svg') }}" color="#ffffff">
     <link rel="shortcut icon" href="{{ asset('/favicon/favicon.ico') }}">
     <script src="{{ asset('assets/echarts-5.1.2-dist/echarts.min.js') }}"></script>
+    <script src="{{ asset('assets/jquery-3.6.0-dist/js/jquery.js') }}"></script>
     <meta name="apple-mobile-web-app-title" content="ИС Экспертус">
     <meta name="application-name" content="ИС Экспертус">
     <meta name="apple-mobile-web-app-title" content="{{ '0JjQoSDQrdC60YHQv9C10YDRgtGD0YE='|base64_decode }}">
@@ -46,10 +47,10 @@
 
 {% block javascripts %}
     {% if app.environment == 'dev' %}
-        <script src="{{ asset('assets/jquery-3.6.0-dist/js/jquery.js') }}"></script>
+
         <script src="{{ asset('assets/bootstrap-4.6.0-dist/js/bootstrap.bundle.js') }}"></script>
     {% else %}
-        <script src="{{ asset('assets/jquery-3.6.0-dist/js/jquery.min.js') }}"></script>
+        {#<script src="{{ asset('assets/jquery-3.6.0-dist/js/jquery.min.js') }}"></script>#}
         <script src="{{ asset('assets/bootstrap-4.6.0-dist/js/bootstrap.bundle.min.js') }}"></script>
     {% endif %}
 
