--- a/templates/grid/doctor.html.twig
+++ b/templates/grid/doctor.html.twig
@@ -27,10 +27,10 @@
                     <th>Дата начала</th>
                     <th>Дата окончания</th>
                     <th>Форма</th>
-                    <th>МКБ</th>
-                    <th>Фаза</th>
-                    <th>Стадия</th>
-                    <th>УслОк</th>
+                    <th>Диагноз</th>
+                    <th>Фаза состояния</th>
+                    <th>Стадия тяжести</th>
+                    <th>Условия оказания помощи</th>
                     <th>Фамилия</th>
                     <th>Имя</th>
                     <th>Отчество</th>
