Линк на форму создания нового случая лечения

--- a/templates/dashboard/doctor.html.twig
+++ b/templates/dashboard/doctor.html.twig
@@ -33,7 +33,7 @@
         <div class="col-md-6">
             <div class="card-grid row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                 <div class="col p-4 d-flex flex-column position-static">
-                    <strong class="d-inline-block mb-2 text-success">Design</strong>
+                    <strong class="d-inline-block mb-2 text-success">Просмотреть</strong>
                     <h3 class="mb-0">Случаи лечения</h3>
                     {# <div class="mb-1 text-muted">Nov 11</div> #}
                     <a href="{{ path('doctor_grid') }}" class="stretched-link"></a>
@@ -52,20 +52,20 @@
         <div class="col-md-6">
             <div class="card-grid row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                 <div class="col p-4 d-flex flex-column position-static">
-                    <strong class="d-inline-block mb-2 text-primary">World</strong>
-                    <h3 class="mb-0">Featured post</h3>
+                    <strong class="d-inline-block mb-2 text-primary">Добавить</strong>
+                    <h3 class="mb-0">Новый случай</h3>
                     {# <div class="mb-1 text-muted">Nov 12</div> #}
                     {# <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p> #}
 
-                    <a href="#" class="stretched-link"></a>
+                    <a href="{{ path('doctor_newsluch') }}" class="stretched-link"></a>
                 </div>
-                <div class="col-auto d-none d-lg-block">
+                <div class="col-auto d-none d-lg-block" style="font-size: 35px">
                     <svg class="bd-placeholder-img" width="100" height="125" xmlns="http://www.w3.org/2000/svg"
                          role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice"
                          focusable="false"><title>Placeholder</title>
                         <rect width="100%" height="100%" fill="#007bff"></rect>
                         <text x="50%" y="50%" fill="#eceeef" font-size="2em" font-weight="600"
-                              dominant-baseline="middle" text-anchor="middle">125
+                              dominant-baseline="middle" text-anchor="middle">+
                         </text>
                     </svg>
                 </div>
