--- a/templates/inc/profile.html.twig
+++ b/templates/inc/profile.html.twig
@@ -1,10 +1,7 @@
 <div class="card p-3">
     <div class="d-flex align-items-start">
         <div class="image">
-            <svg class="bd-placeholder-img rounded" width="155" height="155" xmlns="http://www.w3.org/2000/svg"
-                 role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice"
-                 focusable="false"><title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#55595c"></rect></svg>
+            <img src="{{ asset('/img/icon/doctor-icon-vector-1100452.jpg') }}" height="155px"/>
         </div>
         <div class="ml-3 w-100 d-flex flex-column">
             <h5 class="mb-0 mt-0">{{ fio }}</h5>
