--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -75,7 +75,7 @@
 
     {% else %}
         {#<script src="{{ asset('assets/jquery-3.6.0-dist/js/jquery.min.js') }}"></script>#}
-        <script src="{{ asset('assets/bootstrap-4.6.0-dist/js/bootstrap.bundle.min.js') }}"></script>
+{#        <script src="{{ asset('assets/bootstrap-4.6.0-dist/js/bootstrap.bundle.min.js') }}"></script>#}
     {% endif %}
 
     {% block subjavascripts %}{% endblock %}
