--- a/templates/dashboard/expert.html.twig
+++ b/templates/dashboard/expert.html.twig
@@ -30,7 +30,7 @@
                     {# <div class="mb-1 text-muted">Nov 12</div> #}
                     {# <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p> #}
 
-                    <a href="#" class="stretched-link"></a>
+                    <a href="{{ path('expert_new_krit') }}" class="stretched-link"></a>
                 </div>
                 <div class="col-auto d-none d-lg-block" style="font-size: 35px">
                     <svg class="bd-placeholder-img" width="100" height="125" xmlns="http://www.w3.org/2000/svg"
