--- a/templates/expert/newskrit.html.twig
+++ b/templates/expert/newskrit.html.twig
@@ -3,7 +3,168 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block body %}
+
+    <style>
+        #usl-fields-list,
+        #lek-fields-list {
+            margin: 0;
+            padding: 0;
+            list-style: none;
+        }
+
+
+        #usl-fields-list li,
+        #lek-fields-list li{
+            position: relative;
+        }
+
+        #usl-fields-list li > div,
+        #lek-fields-list li > div {
+            margin-left: 20px;
+        }
+        #usl-fields-list li> button.close-button,
+        #lek-fields-list li> button.close-button {
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+    </style>
+
     {{ form_start(form) }}
+
+    <div class="form-group">
+        {{ form_errors(form.krit_zag) }}
+        {{ form_label(form.krit_zag) }}
+        {{ form_widget(form.krit_zag) }}
+    </div>
+
+    {% if form.krit_str is defined and form.krit_str %}
+        <div class="form-group">
+            {{ form_errors(form.krit_str) }}
+            {{ form_label(form.krit_str) }}
+            {{ form_widget(form.krit_str) }}
+        </div>
+    {% endif %}
+
+    <div class="row">
+        <div class="col-md-6">
+            <h3>Услуги</h3>
+            {% if form.usl is defined and form.usl %}
+                <ul id="usl-fields-list" style="list-style: none"
+                    data-prototype="{{ form_widget(form.usl.vars.prototype)|e }}"
+                    data-widget-counter="{{ form.usl|length }}">
+                    {% for uslField in form.usl %}
+                        <li class="form-group">
+                            {{ form_errors(uslField) }}
+                            {{ form_widget(uslField) }}
+                        </li>
+                    {% endfor %}
+                </ul>
+                <button type="button" class="btn btn-info add_item_link" style="margin: auto;display: block;"
+                        data-list-selector="#usl-fields-list">Добавить услугу
+                </button>
+            {% endif %}
+        </div>
+        <div class="col-md-6">
+            <h3>Лекарства</h3>
+            {% if form.lek is defined and form.lek %}
+                <ul id="lek-fields-list" style="list-style: none"
+                    data-prototype="{{ form_widget(form.lek.vars.prototype)|e }}"
+                    data-widget-counter="{{ form.lek|length }}">
+                    {% for uslField in form.lek %}
+                        <li class="form-group">
+                            {{ form_errors(uslField) }}
+                            {{ form_widget(uslField) }}
+                        </li>
+                    {% endfor %}
+                </ul>
+                <button type="button" class="btn btn-info add_item_link" style="margin: auto;display: block;"
+                        data-list-selector="#lek-fields-list">Добавить лекарство
+                </button>
+            {% endif %}
+        </div>
+    </div>
+
     {{ form_rest(form) }}
 
+    <script>
+        // add-collection-widget.js
+        jQuery(document).ready(function () {
+            // Get the ul that holds the collection of tags
+            var $uslCollectionHolder = $('ul#usl-fields-list');
+            // count the current form inputs we have (e.g. 2), use that as the new
+            // index when inserting a new item (e.g. 2)
+            $uslCollectionHolder.data('index', $uslCollectionHolder.find('li').length);
+
+            $uslCollectionHolder.find('li').each(function () {
+                addFormDeleteLink($(this));
+            });
+            // Get the ul that holds the collection of tags
+            var $lekCollectionHolder = $('ul#lek-fields-list');
+            // count the current form inputs we have (e.g. 2), use that as the new
+            // index when inserting a new item (e.g. 2)
+            $lekCollectionHolder.data('index', $lekCollectionHolder.find('li').length);
+
+            $lekCollectionHolder.find('li').each(function () {
+                addFormDeleteLink($(this));
+            });
+
+            $('body').on('click', '.add_item_link', function (e) {
+                var $collectionHolderClass = $(e.currentTarget).data('list-selector');
+                // add a new tag form (see next code block)
+                addFormToCollection($collectionHolderClass);
+            })
+        });
+
+        function addFormToCollection($collectionHolderClass) {
+            // Get the ul that holds the collection of tags
+            var $collectionHolder = $($collectionHolderClass);
+
+            // Get the data-prototype explained earlier
+            var prototype = $collectionHolder.data('prototype');
+
+            // get the new index
+            var index = $collectionHolder.data('index');
+
+            var newForm = prototype;
+            // You need this only if you didn't set 'label' => false in your tags field in TaskType
+            // Replace '__name__label__' in the prototype's HTML to
+            // instead be a number based on how many items we have
+            // newForm = newForm.replace(/__name__label__/g, index);
+
+            // Replace '__name__' in the prototype's HTML to
+            // instead be a number based on how many items we have
+            newForm = newForm.replace(/__name__/g, index);
+
+            // increase the index with one for the next item
+            $collectionHolder.data('index', index + 1);
+
+            // Display the form in the page in an li, before the "Add a tag" link li
+            var $newFormLi = $('<li class="form-group"></li>').append(newForm);
+            // Add the new form at the end of the list
+            $collectionHolder.append($newFormLi)
+
+
+            addFormDeleteLink($newFormLi);
+
+            updateSelectPicker();
+        }
+
+        function addFormDeleteLink($tagFormLi) {
+            var $removeFormButton = $('<button type="button" class="close close-button" aria-label="Close"><span aria-hidden="true">×</span></button>');
+            $tagFormLi.prepend($removeFormButton);
+
+            $removeFormButton.on('click', function (e) {
+                // remove the li for the tag form
+                $tagFormLi.remove();
+            });
+        }
+
+        function updateSelectPicker() {
+            $('.selectpicker').selectpicker({
+                liveSearch: true,
+            });
+        }
+
+    </script>
 {% endblock %}
